[package]
name = "human-rng-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = { version = "1.0.1" }
bitcoin = { version = "0.28.0" }
clap = { version = "3.1.12", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = 0
strip = true
panic = "abort"
